--- a/ACC/Views/Member/Index.cshtml
+++ b/ACC/Views/Member/Index.cshtml
@@ -68,7 +68,7 @@
 			<table class="table table-bordered">
 				<thead>
 					<tr>
-						<th>Name</th>
+						<th>Email</th>
 						<th>Company</th>
 						<th>Access Level</th>
 						<th>Added On</th>
