--- a/ACC/Views/Member/PartialViews/_AddMemberPartialView.cshtml
+++ b/ACC/Views/Member/PartialViews/_AddMemberPartialView.cshtml
@@ -12,6 +12,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <form id="addMemberForm" method="post" asp-action="InsertMember" asp-controller="Member">
+                <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="modal-header">
                     <h5 class="modal-title" id="addMemberModalLabel">Add Account Member</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
